ui Add: widget beta

--- a/widget.css
+++ b/widget.css
@@ -464,22 +464,6 @@ html {
   font-weight: bold;
   color: mediumseagreen; }
 
-/* Page layout */
-html {
-  position: relative;
-  min-height: 100%; }
-
-body {
-  height: 100%; }
-
-header {
-  top: 0;
-  max-width: 100%; }
-
-main {
-  max-width: 40em;
-  margin: 0.5em auto; }
-
 /* Generic tags definition */
 h2 {
   font-size: 1.2em;
@@ -506,36 +490,6 @@ a {
   a:hover:not(.selected) {
     color: burlywood;
     cursor: pointer; }
-
-/* Cosmic.link header */
-header {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  font-style: italic;
-  color: dimgrey;
-  transition: 0.2s all ease; }
-  header:hover {
-    color: black; }
-  header h1 {
-    display: inline;
-    margin: 0.2em 0;
-    font-size: 1.25em; }
-  header span {
-    font-size: 0.9em;
-    white-space: nowrap; }
-
-/* Navigation bar */
-nav {
-  display: table;
-  margin: auto;
-  padding: 0.5em 1em 0 1em;
-  font-size: 1.1em; }
-  nav a {
-    display: inline-block;
-    margin: 0 1.5em; }
-    nav a.selected {
-      text-decoration: underline; }
 
 /* Form styling */
 form {
@@ -703,17 +657,19 @@ iframe[src$="/u2f-comms.html"] {
   display: none; }
 
 /* Layout style */
-html {
-  overflow-y: scroll; }
-
 body {
-  background-color: aliceblue;
   font-family: Arial, sans-serif; }
 
 main {
-  border: 3px solid lightgrey;
-  border-radius: 1em;
-  box-shadow: 0.1em 0.1em 0.3em darkgrey;
-  padding: 0 0.5em;
+  max-width: 40em;
+  padding: 0.5em;
   overflow: hidden;
   background-color: white; }
+
+/* Overwrites */
+hr {
+  height: 1.25em;
+  background: none; }
+
+#redirectionCheckbox + label {
+  display: none; }
