--- a/index.css
+++ b/index.css
@@ -533,7 +533,7 @@ a {
     cursor: pointer;
     color: #b7c0d1; }
 
-section {
+main > section {
   padding-bottom: 0.35em; }
 
 /* Cosmic.link header */
@@ -663,6 +663,9 @@ input:hover:enabled {
     color: #292929; }
 
 /* Individual elements styling */
+.CosmicLinkApp {
+  width: 100%; }
+
 #about h3 {
   margin-top: 4.2rem; }
 
@@ -690,20 +693,16 @@ input:hover:enabled {
   filter: grayscale(15%);
   transform: translate(-20%, -20%); }
 
-#cosmiclink_description {
+.cosmiclink_description {
   vertical-align: baseline; }
 
-#networkSelector {
-  overflow-x: auto;
-  overflow-y: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
-  #networkSelector [type="radio"] + label {
-    width: 45%;
-    max-width: 9.75em; }
+.NetworkSelector [type="radio"] + label {
+  width: 30%;
+  margin-left: 1%;
+  margin-right: 1%;
+  max-width: 7.25em; }
 
-#accountMsgbox,
-#redirectionMsgbox {
+.TxResultView {
   margin: 0.7em 0; }
 
 #copied {
@@ -747,7 +746,7 @@ input:hover:enabled {
   text-align: center;
   font-style: italic; }
 
-#tamper {
+.AntiTamper {
   position: fixed;
   max-height: 50%;
   max-width: 40%;
