--- a/index.css
+++ b/index.css
@@ -345,6 +345,9 @@ body > * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+/* Grey */
+/* Primary */
+/* Elevation */
 /* cosmiclink_description styling */
 .cosmiclink_description {
   line-height: 1.4em; }
