--- a/index.css
+++ b/index.css
@@ -308,23 +308,22 @@ template {
 @-ms-viewport {
   width: device-width; }
 
-@media screen and (min-width: 800px), screen and (min-height: 600px) {
-  html {
-    font-size: 1.1em; } }
+html {
+  font-size: 1.1em; }
 
-@media screen and (min-width: 1024px), screen and (min-height: 768px) {
+@media screen and (min-width: 64em), screen and (min-height: 64em) {
   html {
     font-size: 1.2em; } }
 
-@media screen and (min-width: 1366px), screen and (min-height: 1024px) {
+@media screen and (min-width: 85.375em), screen and (min-height: 85.375em) {
   html {
     font-size: 1.3em; } }
 
-@media screen and (min-width: 1920px), screen and (min-height: 1366px) {
+@media screen and (min-width: 120em) {
   html {
     font-size: 1.5em; } }
 
-@media screen and (min-width: 2560px) {
+@media screen and (min-width: 160em) {
   html {
     font-size: 1.8em; } }
 
@@ -652,7 +651,7 @@ button {
   button:focus:enabled {
     cursor: pointer;
     outline: 0;
-    box-shadow: 0em 0em 0.1em #003f90;
+    box-shadow: 0 0 0.1em #003f90;
     background-color: #daeeff;
     border: solid thin #409dff; }
 
@@ -685,7 +684,7 @@ input[type="submit"] {
     padding: 0 1em;
     line-height: 2em;
     border: none;
-    background: #ffffff; }
+    background: #fff; }
   [type="checkbox"]:enabled + label:hover,
   [type="radio"]:enabled + label:hover {
     cursor: pointer;
@@ -728,9 +727,10 @@ form .third + label {
   margin-top: 4.2rem; }
 
 #about pre {
-  background: #daeeff;
+  background: #f4f4f4;
   color: #002a64;
-  padding: 0 1.4em; }
+  padding: 0 1.4em;
+  border-radius: 0.4em; }
 
 #about ul {
   list-style-type: none;
@@ -758,7 +758,8 @@ form .third + label {
   width: 30%;
   margin-left: 1%;
   margin-right: 1%;
-  max-width: 7.25em; }
+  max-width: 7.25em;
+  padding: 0; }
 
 .TxResultView {
   margin: 0.7em 0; }
@@ -769,7 +770,7 @@ form .third + label {
   transform: translate(0.1em, 0.45em);
   color: #006ae8;
   font-weight: bold;
-  background: #ffffff;
+  background: #fff;
   opacity: 0.9; }
 
 #qrForm > div {
@@ -802,7 +803,10 @@ form .third + label {
   display: table;
   margin: 1.4em auto;
   text-align: center;
-  font-style: italic; }
+  font-style: italic;
+  color: #002a64; }
+  #registerSep7Handler:hover {
+    color: #006ae8; }
 
 .AntiTamper {
   position: fixed;
@@ -821,10 +825,10 @@ iframe[src$="/u2f-comms.html"] {
 /* Layout style */
 ::-moz-selection {
   background-color: #409dff;
-  color: #ffffff; }
+  color: #fff; }
 ::selection {
   background-color: #409dff;
-  color: #ffffff; }
+  color: #fff; }
 
 html {
   overflow-y: scroll; }
@@ -840,7 +844,7 @@ main {
   z-index: 100;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   border-radius: 1em;
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 0 7%;
   overflow: hidden; }
 
